# kana

./: Cargo.toml  README.md  cspell.json  test-conversion.md
examples/: hello.rs  kana-conversion.rs  perf.rs  simple-conversion.rs
kana-macros/: Cargo.toml
kana-macros/src/: chars.rs  lib.rs  ranges.rs  table.rs
kana-macros/tests/: 01-build_answer.rs  01-build_charinfo_simple.rs  build_charinfo_syntax.rs  build_table_syntax.rs  check_answer.rs  check_build.rs  test_bitflags.rs  test_build.rs  test_charinfo.rs
src/: chars.rs  convert.rs  flags.rs  is.rs  lib.rs
src/transform/: case.rs  chain.rs  mod.rs  trim.rs
testdata/: self_check.in
testdata/chars/: chartable.in  flags.in  fullwidth.in  halfwidth.in  hiragana.in  kana.in  kanji-ranges.in  kanji.in  katakana-halfwidth.in  katakana.in  linebreak.in  number.in  punctuation-japanese.in  punctuation-romaji.in  punctuation.in  radicals.in  rare.in  romaji.in  roman.in  small.in  space.in  spaces.in  symbol-japanese.in  symbol-romaji.in  symbols.in  word.in
testdata/conversion/: between-kana.in  from-hiragana.in  from-kana.in  from-katakana.in  from-romaji.in  half-katakana.in  ime.in  input.in  katakana-long-vowels.in  long-vowel.in  table.in
testdata/docs/: kanji.md  special.md  unicode-reference-japanese-characters.md
testdata/perf/: results.md
tests/: self_check.rs  test_chars.rs  test_convert.rs  test_is.rs
tests/common/: mod.rs
