[package]
name = "kana"
version = "0.1.0"
edition = "2018"

[workspace]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kana-macros = { path = "kana-macros" }
lazy_static = "1"
automato = { git = "https://github.com/ax-lab/automato" }

[dev-dependencies]
regex = "1"
automato = { git = "https://github.com/ax-lab/automato" }
automato-macros = { git = "https://github.com/ax-lab/automato" }
